--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,13 @@
 			<version>1.2.5-R4.0</version>
 		</dependency>
 		<dependency>
+			<groupId>com.sk89q.worldguard.bukkit.WorldEditPlugin</groupId>
+			<artifactId>WorldEdit</artifactId>
+			<version>5.3</version>
+			<scope>system</scope>
+			<systemPath>${project.basedir}/lib/WorldEdit.jar</systemPath>
+		</dependency>
+		<dependency>
 			<groupId>com.sk89q.worldguard.bukkit.WorldGuardPlugin</groupId>
 			<artifactId>WorldGuard</artifactId>
 			<version>5.5.2</version>
